# fal

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  fal_client.html  objects.inv  pyproject.toml  searchindex.js
projects/fal/: .gitignore  AGENTS.md  Makefile  README.md  fal.yaml  generate_url.py  pyproject.toml  test_presigned.sh  upload_url.py
projects/fal/docs/: conf.py
projects/fal/openapi-fal-rest/: README.md  pyproject.toml
projects/fal/openapi-fal-rest/openapi_fal_rest/: __init__.py  types.py
projects/fal/openapi-fal-rest/openapi_fal_rest/models/: __init__.py  account_type.py  admin_app_request_latency_request_type.py  admin_app_request_traffic_request_type.py  admin_billing_emails.py  admin_compute_instance.py  admin_config.py  admin_config_burst_billing_config.py  admin_config_burst_billing_config_additional_property.py  admin_config_concurrency_surcharge.py  admin_config_concurrent_requests_limit_per_endpoint.py  admin_config_max_registered_max_gpus_by_type.py  admin_config_serverless_surge_thresholds.py  admin_create_compute_instance.py  admin_environment_info.py  admin_filter_requests_by_endpoint_sort_by.py  admin_filter_requests_by_endpoint_status.py  admin_key_info.py  admin_list_enterprise_contracts_paginate_sort_by.py  admin_list_enterprise_contracts_paginate_sort_order.py  admin_list_logs_history_direction.py  admin_list_logs_history_run_source.py  admin_list_logs_run_source.py  admin_list_runners_owner.py  admin_list_runners_state.py  admin_role.py  admin_runner_info.py  admin_runner_info_leases_metadata_item.py  admin_runner_info_owner.py  admin_runner_info_state.py  admin_runner_list_response.py  admin_stream_logs_run_source.py  admin_user_key_info.py  aggregate_request_traffic_request_type.py  aggregate_request_traffic_stats.py  aggregate_request_traffic_stats_request_type.py  aggregate_requests_by_app_metric.py  aggregate_requests_by_app_request_type.py  aggregate_requests_by_status_code_request_type.py  alertmanager_webhook_alert.py  (+642 more)
projects/fal/src/fal/: __init__.py  _caller_fallback.py  _compat.py  _pydantic_patch.py  _serialization.py  _typing.py  _user_agent.py  _version.py  api.py  app.py  app_files.py  apps.py  cli.py  compat.py  config.py  container.py  env.py  file_sync.py  files.py  flags.py  helpers.py  realtime.py  ref.py  rest_client.py  sdk.py  sync.py  upload.py  utils.py  wma.py  workflows.py
projects/fal/src/fal/api/: __init__.py  _metrics.py  _sdist.py  api.py  apps.py  client.py  deploy.py  environments.py  keys.py  run.py  runners.py  secrets.py
projects/fal/src/fal/auth/: __init__.py  auth0.py  colab.py  local.py  workos_auth.py
projects/fal/src/fal/cli/: __init__.py  _result_handlers.py  _utils.py  api.py  apps.py  auth.py  cli_nested_json.py  completion.py  create.py  debug.py  deploy.py  deploy_check.py  doctor.py  environments.py  files.py  keys.py  machine.py  main.py  parser.py  profile.py  queue.py  run.py  runners.py  secrets.py  teams.py
projects/fal/src/fal/console/: __init__.py  encoding.py  icons.py  rules.py  ux.py
projects/fal/src/fal/distributed/: __init__.py  utils.py  worker.py
projects/fal/src/fal/exceptions/: __init__.py  _base.py  _cuda.py  auth.py  gpu.py  handlers.py
projects/fal/src/fal/files/: cache.py  main.py
projects/fal/tests/: conftest.py  integration_test.py  pydantic_patch.py  pydantic_test.py  stability_test.py  test_apps.py  test_apps_simple.py  test_file_sync.py  test_files.py  test_pydantic.py  test_stability.py
projects/fal/tests/cli/: test_apps.py  test_auth.py  test_deploy.py  test_keys.py  test_run.py
projects/fal/tests/distributed/: test_app.py  test_utils.py  test_worker.py
projects/fal/tests/e2e/: test_apps.py  test_webrtc.py
projects/fal/tests/integration/: test.py  test_environments.py  test_files.py  test_stability.py
projects/fal/tests/mainify_package/: __init__.py  impl.py
projects/fal/tests/pydantic_standalone/: pydantic_patch.py
projects/fal/tests/toolkit/: file_test.py  image_test.py  image_test_requires_pil.py  test_types.py
projects/fal/tests/unit/: test_api_client.py  test_api_metrics.py  test_api_run.py  test_app.py  test_auth0.py  test_auth_credentials.py  test_auth_local.py  test_caller_fallback.py  test_config.py  test_container.py  test_cuda_exceptions.py  test_file_sync.py  test_flags.py  test_gpu_exceptions.py  test_grpc_error_handling.py  test_helpers.py  test_request_validation_errors.py  test_sdist.py  test_sdk.py  test_sdk_serialization.py  test_serialization.py  test_utils.py  test_wma.py
projects/fal/tools/: cancel_demo_app.py  demo_script.py
projects/fal_client/: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
projects/fal_client/docs/: conf.py
projects/fal_client/src/fal_client/: __init__.py  _headers.py  _version.py  auth.py  client.py
projects/fal_client/tests/: test_async_client.py  test_sync_client.py
projects/fal_client/tests/unit/: test_auth.py  test_client.py  test_headers.py  test_pydantic_compatibility.py  test_retry.py
projects/fal_serverless/: README.md  pyproject.toml
projects/fal_serverless/fast-api-client/: README.md  pyproject.toml
projects/fal_serverless/src/fal/: __init__.py  _serialization.py  api.py  apps.py  cli.py  decorators.py  flags.py  rest_client.py  sdk.py  sync.py
projects/fal_serverless/src/fal_serverless/: __init__.py  _serialization.py  api.py  cli.py  decorators.py  flags.py  rest_client.py  sdk.py  sync.py
projects/fal_serverless/tests/: conftest.py  integration_test.py  mainify_target.py  rest_integration_tests.py  test_apps.py  test_stability.py
projects/fal_serverless/tests/mainify_package/: __init__.py  utils.py
projects/fal_serverless/tests/toolkit/: file_test.py  image_test_requires_pil.py
projects/fal_serverless/tools/: demo_script.py
projects/isolate_proto/: AGENTS.md  README.md  pyproject.toml
projects/isolate_proto/src/isolate_proto/: __init__.py  configuration.py  controller.proto  controller_pb2.py  controller_pb2.pyi  controller_pb2_grpc.py
projects/isolate_proto/tests/: test_proto.py
(+809 files in other folders)
