[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "../../"
git_describe_command= 'git describe --tags --abbrev=0 --dirty --match "fal_client_v*"'
tag_regex = "^fal_client_v(?P<version>.*)$"

[project]
name = "fal_client"
dynamic = ["version"]
description = "Python client for fal.ai"
readme = "README.md"
authors = [{ name = "Features & Labels <support@fal.ai>" }]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.21.0,<1",
    "httpx-sse>=0.4.0,<0.5",
    "msgpack>=1.0.7,<2",
    "websockets>=12.0",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pillow",
]
dev = [
    "fal_client[docs,test]",
]

[project.urls]
homepage = "https://fal.ai"
repository = "https://github.com/fal-ai/fal"

[tool.pytest.ini_options]
testpaths = "tests/"
asyncio_mode = "auto"

[tool.setuptools]
packages = ["fal_client"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"fal_client" = ["py.typed"]
