[tool.poetry]
name = "isolate_proto"
version = "0.3.3a0"
readme = "README.md"
description = "(internal) gRPC definitions for Isolate Cloud"
authors = ["Features & Labels <hello@fal.ai>"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
grpcio = ">=1.49"
protobuf = "*"
isolate = {version = ">=0.12.3, <1.0", extras = ["build"]}

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
