[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "../../"
git_describe_command= 'git describe --tags --abbrev=0 --dirty --match "isolate_proto_v*"'
tag_regex = "^isolate_proto_v(?P<version>.*)$"

[tool.setuptools.packages.find]
where = ["src"]
include = ["isolate_proto"]
namespaces = false

[project]
name = "isolate_proto"
dynamic = ["version"]
readme = "README.md"
description = "(internal) gRPC definitions for Isolate Cloud"
authors = [{ name = "Features & Labels <support@fal.ai>" }]
requires-python = ">=3.8"
dependencies = [
    # NOTE: when upgrading grpcio version, make sure you also upgrade grpcio-tools
    # and re-generate python bindings (see tools/regen_grpc.py).
    "grpcio==1.64.0",
    "protobuf",
    "isolate[build]>=0.13.0,<1.14.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
]
dev = [
    "isolate_proto[test]",
    # for tools/regen_grpc.py
    "refactor",
    "grpcio-tools==1.64.0",
    "mypy-protobuf",
]
