[tool.poetry]
name = "openapi-fal-rest"
version = "0.1.0"
description = "A client library for accessing FastAPI"
authors = []
readme = "README.md"
packages = [
    {include = "openapi_fal_rest"},
]
include = ["CHANGELOG.md", "openapi_fal_rest/py.typed"]


[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.20.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
